Add trailing slash to fix Apache sample conf

--- a/httpd-vhosts-sample.conf
+++ b/httpd-vhosts-sample.conf
@@ -25,7 +25,7 @@
     DocumentRoot "/srv/http/flask"
     WSGIScriptAlias / /srv/http/flask/flaskhello.py
     ServerName linuxreport.net
-    Alias /static/ /srv/http/flask/static
+    Alias /static/ /srv/http/flask/static/
 
     <Directory /srv/http/flask/static>
         Options +Indexes
