generic requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-feedparser==5.2.1
-Flask==1.1.1
-Flask-BabelEx==0.9.4
-Flask-Bootstrap==3.3.7.1
-Flask-Caching==1.8.0
-Flask-Mobility==1.0.0
-Werkzeug==1.0.0
-WTForms==2.2.1
+feedparser
+Flask
+Flask-BabelEx
+Flask-Bootstrap
+Flask-Caching
+Flask-Mobility
+Werkzeug
+WTForms
+autoscraper
 
