requirements.txt closer to reality

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
+beautifulsoup4
+cacheout
+diskcache
+fake_useragent
 feedparser
+filelock
 Flask
-Flask-BabelEx
-Flask-Bootstrap
-Flask-Caching
-Flask-Mobility
+Flask_Mobility
+geoip2
+Jinja2
+MarkupSafe
+openai
+pandas
+Pillow
+Requests
+selenium
+sentence_transformers
+sqlalchemy
+webdriver_manager
 Werkzeug
 WTForms
-autoscraper
-openai
-
