need two stages of requirements.txt for this to work properly

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,25 +4,4 @@ torch
 torchvision
 torchaudio
 
-# The rest of your requirements
-beautifulsoup4
-cacheout
-diskcache
-fake_useragent
-feedparser
-filelock
-Flask
-Flask_Mobility
-geoip2
-Jinja2
-MarkupSafe
-openai
-pandas
-Pillow
-Requests
-selenium
-sentence_transformers
-sqlalchemy
-webdriver_manager
-Werkzeug
-WTForms
+# Then do pip install -r requirements2.txt to get the rest of the requirements
