--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,16 +25,19 @@ dependencies = [
     "apache_libcloud>=3.8.0",
     "beautifulsoup4>=4.13.4",
     "cacheout>=0.16.0",
+    "cssmin>=0.2.1",
     "diskcache>=5.6.3",
     "fake_useragent>=2.1.0",
     "feedparser>=6.0.11",
     "filelock>=3.18.0",
     "Flask>=3.1.1",
+    "Flask-Assets>=2.1.0",
     "flask_cors>=5.0.1",
     "Flask-Mobility>=2.0.1",
     "geoip2>=5.0.1",
     "graphviz>=0.20.3",
     "Jinja2>=3.1.6",
+    "jsmin>=3.0.1",
     "MarkupSafe>=3.0.2",
     "openai>=1.86.0",
     "pandas>=2.3.0",
