Implement Flask-Login for user authentication, replacing cookie-based admin mode. Add login and logout routes, and create a login form. Update templates to reflect admin status using Flask-Login. Introduce a User model for authentication and manage session security with a secret key.

--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,7 @@
 # Admin settings
 admin:
   password: "LinuxReportAdmin2024"
+  secret_key: "your-super-secret-key-change-this-in-production"
 
 # Storage settings
 storage:
