--- a/config.yaml
+++ b/config.yaml
@@ -78,4 +78,4 @@ settings:
     <font size="4">(Displays instantly, refreshes hourly) - Fork me on <a target="_blank"
     href = "https://github.com/KeithCu/LinuxReport">GitHub</a> or <a target="_blank"
     href = "https://gitlab.com/keithcu/linuxreport">GitLab. </a></font>
-    <br/>Now using <a href="https://openrouter.ai" target="_blank">OpenRouter</a> to access a variety of free LLMs for selecting the top headlines. 
+    <br/>Check out the <a href="https://deepwiki.com/KeithCu/LinuxReport" target="_blank">DeepWiki</a> with analysis, pictures, graphs, and more! 
