--- a/config.yaml
+++ b/config.yaml
@@ -79,3 +79,4 @@ settings:
     href = "https://github.com/KeithCu/LinuxReport">GitHub</a> or <a target="_blank"
     href = "https://gitlab.com/keithcu/linuxreport">GitLab. </a></font>
     <br/>Check out the <a href="https://deepwiki.com/KeithCu/LinuxReport" target="_blank">DeepWiki</a> with analysis, pictures, graphs, and more! 
+    <br/>Or try <a href="#" onclick="document.getElementById('view-mode-toggle').click(); return false;">Infinite View</a> to see all the latest articles in one shared list!
