--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.7"
 license = {text = "LGPLv3"}
 authors = [
-    {name = "Keith Cu", email = "keithcu@gmail.com"},
+    {name = "Keith Curtis", email = "keithcu@gmail.com"},
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -27,27 +27,35 @@ dependencies = [
     "cacheout>=0.16.0",
     "cssmin>=0.2.1",
     "diskcache>=5.6.3",
-    "fake_useragent>=2.1.0",
+    "fake_useragent>=2.2.0",
     "feedparser>=6.0.11",
     "filelock>=3.18.0",
-    "Flask>=3.1.1",
+    "Flask>=3.1.0",
     "Flask-Assets>=2.1.0",
-    "flask_cors>=5.0.1",
+    "flask_cors>=6.0.0",
+    "Flask-Compress>=1.17",
+    "Flask-Login>=0.6.3",
+    "Flask-Limiter>=3.12",
+    "Flask-RESTful>=0.3.10",
+    "Flask-WTF>=1.2.2",
     "Flask-Mobility>=2.0.1",
+    "flask-monitoringdashboard>=4.0.0",
     "geoip2>=5.0.1",
     "graphviz>=0.20.3",
     "Jinja2>=3.1.6",
     "jsmin>=3.0.1",
     "MarkupSafe>=3.0.2",
-    "openai>=1.86.0",
-    "pandas>=2.3.0",
+    "matplotlib>=3.8.0",
+    "openai>=1.75.0",
+    "pandas>=2.2.3",
     "Pillow>=11.2.1",
     "pyahocorasick>=2.1.0",
     "PyYAML>=6.0.2",
-    "requests>=2.32.4",
-    "selenium>=4.33.0",
+    "requests>=2.32.0",
+    "scikit-learn>=1.6.1",
+    "selenium>=4.31.0",
     "sentence-transformers>=4.1.0",
-    "setuptools>=78.1.0",
+    "setuptools>=79.0.0",
     "SocksiPy-branch>=1.01",
     "tabulate>=0.9.0",
     "tenacity>=9.1.2",
