--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,41 @@
 # The requirements to run the app
-beautifulsoup4
-cacheout
-diskcache
-fake_useragent
-feedparser
-filelock
-Flask
-Flask_Mobility
-geoip2
-Jinja2
-MarkupSafe
-openai
-pandas
-Pillow
-Requests
-selenium
-sentence_transformers
-sqlalchemy
-webdriver_manager
-Werkzeug
-WTForms
+apache_libcloud>=3.8.0
+beautifulsoup4>=4.13.4
+cacheout>=0.16.0
+cssmin>=0.2.1
+diskcache>=5.6.3
+fake_useragent>=2.2.0
+feedparser>=6.0.11
+filelock>=3.18.0
+Flask>=3.1.0
+Flask-Assets>=2.1.0
+flask_cors>=6.0.0
+Flask-Compress>=1.17
+Flask-Login>=0.6.3
+Flask-Limiter>=3.12
+Flask-RESTful>=0.3.10
+Flask-WTF>=1.2.2
+Flask-Mobility>=2.0.1
+flask-monitoringdashboard>=4.0.0
+geoip2>=5.0.1
+graphviz>=0.20.3
+Jinja2>=3.1.6
+jsmin>=3.0.1
+MarkupSafe>=3.0.2
+matplotlib>=3.8.0
+openai>=1.75.0
+pandas>=2.2.3
+Pillow>=11.2.1
+pyahocorasick>=2.1.0
+PyYAML>=6.0.2
+requests>=2.32.0
+scikit-learn>=1.6.1
+selenium>=4.31.0
+sentence-transformers>=4.1.0
+setuptools>=79.0.0
+SocksiPy-branch>=1.01
+tabulate>=0.9.0
+tenacity>=9.1.2
+webdriver-manager>=4.0.2
+Werkzeug>=3.1.3
+WTForms>=3.2.1
