Refactor Tor.py to utilize centralized password management by replacing hardcoded password with a call to get_tor_password(). This change enhances security and maintains consistency in authentication practices across the application.

--- a/config.yaml
+++ b/config.yaml
@@ -20,6 +20,10 @@ storage:
   shared_path: "/run/linuxreport"  # Path for shared data like weather, etc.
 
 
+# Tor network settings
+tor:
+  password: "TESTPASSWORD"  # Password for Tor control port authentication
+
 # Report modes configuration
 # Add any additional report modes here beyond the base modes
 reports:
