--- a/config.yaml
+++ b/config.yaml
@@ -19,10 +19,15 @@ storage:
 
   shared_path: "/run/linuxreport"  # Path for shared data like weather, etc.
 
-
 # Tor network settings
 tor:
   password: "TESTPASSWORD"  # Password for Tor control port authentication
+
+# Proxy server settings
+proxy:
+  server: "127.0.0.1:8080"  # Proxy server address and port
+  username: ""  # Optional proxy username
+  password: ""  # Optional proxy password
 
 # Report modes configuration
 # Add any additional report modes here beyond the base modes
