--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ PyYAML>=6.0.2
 requests>=2.32.0
 scikit-learn>=1.6.1
 selenium>=4.31.0
+playwright>=1.40.0
 setuptools>=79.0.0
 SocksiPy-branch>=1.01
 tabulate>=0.9.0
