Add script for installing CPU-only ML dependencies and update README
- Introduced `install_cpu_ml_deps.sh` script to facilitate the installation of CPU versions of PyTorch and sentence-transformers.
- Updated `README.md` to include instructions for using the new script for CPU-only installations.
- Removed `requirements_autoupdate.txt` as its content is now handled by the new script.
- Minor adjustment in `requirements.txt` to comment out an unused dependency, maintaining clarity in the requirements list.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # The requirements to run the app
-apache_libcloud>=3.8.0
+#apache_libcloud>=3.8.0
 beautifulsoup4>=4.13.4
 cacheout>=0.16.0
 cssmin>=0.2.0
