--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [build-system]
-requires = ["setuptools>=61.0.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "LinuxReport"
 version = "0.1.0"
 description = "A Python/Flask-based news aggregation site for Linux, Covid-19, AI, Solar/PV, Detroit Techno and anything else you want."
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.10"
 license = {text = "LGPLv3"}
 authors = [
     {name = "Keith Curtis", email = "keithcu@gmail.com"},
@@ -22,10 +22,9 @@ classifiers = [
 ]
 
 dependencies = [
-    "apache_libcloud>=3.8.0",
     "beautifulsoup4>=4.13.4",
     "cacheout>=0.16.0",
-    "cssmin>=0.2.1",
+    "cssmin>=0.2.0",
     "diskcache>=5.6.3",
     "fake_useragent>=2.2.0",
     "feedparser>=6.0.11",
@@ -39,7 +38,6 @@ dependencies = [
     "Flask-RESTful>=0.3.10",
     "Flask-WTF>=1.2.2",
     "Flask-Mobility>=2.0.1",
-    "flask-monitoringdashboard>=4.0.0",
     "geoip2>=5.0.1",
     "graphviz>=0.20.3",
     "Jinja2>=3.1.6",
@@ -49,12 +47,12 @@ dependencies = [
     "openai>=1.75.0",
     "pandas>=2.2.3",
     "Pillow>=11.2.1",
+    "playwright>=1.40.0",
     "pyahocorasick>=2.1.0",
     "PyYAML>=6.0.2",
     "requests>=2.32.0",
     "scikit-learn>=1.6.1",
     "selenium>=4.31.0",
-    "sentence-transformers>=4.1.0",
     "setuptools>=79.0.0",
     "SocksiPy-branch>=1.01",
     "tabulate>=0.9.0",
@@ -68,9 +66,20 @@ dependencies = [
 Homepage = "https://github.com/KeithCu/LinuxReport"
 Repository = "https://github.com/KeithCu/LinuxReport.git"
 
+[tool.hatch.build.targets.wheel]
+packages = ["."]
+
 [tool.setuptools.packages.find]
 where = ["."]
 exclude = ["tests*", "docs*", "*.md", "*LICENSE*", "*README*"]
 
 [tool.setuptools.package-data]
 LinuxReport = ["*.json", "*.txt", "*.yaml", "*.conf"]
+
+[dependency-groups]
+dev = []
+cpu-pytorch = [
+    "torch",
+    "torchvision",
+    "torchaudio",
+]
