--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,17 +69,70 @@ Repository = "https://github.com/KeithCu/LinuxReport.git"
 [tool.hatch.build.targets.wheel]
 packages = ["."]
 
-[tool.setuptools.packages.find]
-where = ["."]
-exclude = ["tests*", "docs*", "*.md", "*LICENSE*", "*README*"]
-
-[tool.setuptools.package-data]
-LinuxReport = ["*.json", "*.txt", "*.yaml", "*.conf"]
+[tool.hatch.build.targets.wheel.force-include]
+"config.yaml" = "config.yaml"
+"httpd-vhosts-sample.conf" = "httpd-vhosts-sample.conf"
 
 [dependency-groups]
-dev = []
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
+    "flake8>=6.0.0",
+    "mypy>=1.0.0",
+]
 cpu-pytorch = [
     "torch",
     "torchvision",
     "torchaudio",
 ]
+
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+
+[tool.black]
+line-length = 160
+target-version = ['py310']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 160
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = true
