Update documentation and dependencies for improved development workflow
- Added a note in agents.md to clarify the use of `.venv` virtual environment and the maintenance of both `pyproject.toml` and `requirements.txt` for different development workflows.
- Included `praw>=7.7.0` in both pyproject.toml and requirements.txt to ensure compatibility with recent changes in Reddit API integration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "openai>=1.75.0",
     "pandas>=2.2.3",
     "Pillow>=11.2.1",
+    "praw>=7.7.0",
     "playwright>=1.40.0",
     "pyahocorasick>=2.1.0",
     "PyYAML>=6.0.2",
