Add Reddit username configuration and refactor user agent construction
- Introduced a new function to retrieve the Reddit username from configuration, defaulting to "keithcu" if not set.
- Updated the user agent construction in Reddit.py to utilize the configured Reddit username, enhancing API compliance and identification.
- Modified config.yaml to include a section for Reddit API settings, specifying the username for user agent construction.
- Refactored entry formatting functions to improve readability and maintainability, consolidating logic for building entry fields.

--- a/config.yaml
+++ b/config.yaml
@@ -26,6 +26,10 @@ storage:
 tor:
   password: "TESTPASSWORD"  # Password for Tor control port authentication
 
+# Reddit API settings
+reddit:
+  username: "keithcu"  # Reddit username for user agent (change for your deployment)
+
 # Proxy server settings
 proxy:
   server: "127.0.0.1:8080"  # Proxy server address and port
